fix(button menu): fix button spacings on very small screens

--- a/src/moj/components/button-menu/_button-menu.scss
+++ b/src/moj/components/button-menu/_button-menu.scss
@@ -4,6 +4,10 @@ $moj-datepicker-mid-grey: #949494;
 .moj-button-menu {
   display: inline-block;
   position: relative;
+
+  > .govuk-button {
+    margin-bottom: 0;
+  }
 }
 
 .moj-button-menu__toggle-button {
