--- a/src/moj/components/page-header-actions/_page-header-actions.scss
+++ b/src/moj/components/page-header-actions/_page-header-actions.scss
@@ -16,7 +16,7 @@
 
 .moj-page-header-actions__actions {
   .moj-button-group {
-    margin-bottom: 0
+    margin-bottom: 0;
   }
   .govuk-button {
     margin-bottom: 0;
